# microvoxel

./: CMakeLists.txt  Cargo.toml  build-debug.sh  build.sh  notes.md  readme.md  todo.md
cpp/: CMakeLists.txt  build-release.sh
cpp/src/: fps.hpp  generator.hpp  transform.cpp
lattice-microvoxel-rs/: Cargo.toml
lattice-microvoxel-rs/src/: camera.rs  shader.wgsl
raytracer/: Cargo.toml
raytracer/src/: main.rs
src/: camera.rs  fps.cpp  generator.cpp  generator.hpp  main.cpp  main.rs  shader.wgsl  transform.cpp  transform.hpp  vertex.hpp
